--- a/template/package.json
+++ b/template/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev:assets": "webpack --watch",
-    "dev:start": "live-server --open=./public/ --host=localhost --watch=./public/",
+    "dev:start": "live-server --open=./template/ --host=localhost --watch=./template/",
     "dev": "npm-run-all -p dev:*",
     "build": "cross-env NODE_ENV=production webpack"
   },
